# memory-database

./: .env.example  .envrc.template  .gitignore  AGENTS.md  MCP_SETUP_GUIDE.md  README.md  com.memory-database.mcp.plist.template  com.memory-database.tailscale-serve.plist.template  mcp_server.service  personal-rag-readme.md  pyproject.toml  pytest.ini  run_mcp_server.py  run_tests.sh  test_mcp.py  test_mcp_functionality.py  test_mcp_quick.py  test_mcp_real_data.py  test_mcp_server.py
docs/: IDENTITY_CONSTRAINT_ISSUE.md  IDENTITY_UNIQUENESS.md  README.md
imessage-bridge/: Cargo.toml  pyproject.toml
imessage-bridge/src/: lib.rs
migrations/: 001_add_identity_uniqueness_constraint.py  001_initial_schema.sql  002_add_identity_constraints.sql  README.md
scripts/: sync_imessages_cron.sh
src/memory_database/: cli.py
src/memory_database/database/: connection.py
src/memory_database/ingestion/: base.py  contacts.py  email.py  imessage.py
src/memory_database/mcp_server/: __init__.py  photos_tools.py  queries.py  server.py  write_tools.py
src/memory_database/models/: __init__.py  attachments.py  chunks.py  media.py  messages.py  people.py
src/memory_database/storage/: __init__.py  attachment_manager.py
src/memory_database/utils/: chinese.py  config.py  identity_resolver.py  normalization.py  ulid.py
tests/: README.md  README_TESTING.md  conftest.py  test_imessage_real_sample.py  test_imessage_security.py  test_ingestion_base_identity.py  test_mcp_core_functionality.py  test_mcp_search.py  test_mcp_simple.py  test_photos_tools.py
tests/fixtures/: extract_imessage_sample.py  test_imessage_sample.db
tests/mocks/: mock_attachment_manager.py
