[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-database"
version = "0.1.0"
description = "Messages RAG System with People Database"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = []
keywords = ["rag", "messages", "contacts", "personal-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "psycopg2-binary>=2.9.7",
    "sqlalchemy>=2.0.20",
    "alembic>=1.12.0",
    # "pgvector>=0.2.3",  # TODO: Add when implementing vector search
    "python-ulid>=1.1.0",
    "python-dateutil>=2.8.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "structlog>=23.1.0",
    "rich>=13.5.0",
    "maturin>=1.5.0", # For building Rust extension
    "phonenumbers>=8.13.0", # For phone number normalization
    "tqdm>=4.66.0", # For progress bars
    "fastmcp>=2.11.3",
    "osxphotos>=0.60.0",
    "pypinyin>=0.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
memory-database = "memory_database.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_database"]

[project.urls]
Homepage = ""
Repository = ""
Issues = ""

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "ulid.*",
    "pgvector.*",
    "structlog.*",
    "rich.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = [
    "tests",
]
pythonpath = [
    ".",
]
