[package]
name = "imessage-bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "imessage_bridge"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
imessage-database = { git = "https://github.com/ReagentX/imessage-exporter.git", branch = "develop" }
rusqlite = "0.36"  # Use same version as imessage-database
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1